--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,5 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  background-color: #242424;
-}
-
-body {
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
-
-
-
