--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url(https://db.onlinewebfonts.com/c/30bb285a0c5e40fc620a793eff494dfd?family=SharpSansNo1-Medium);
+
 * {
   margin: 0;
   padding: 0;
