--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+main {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
